--- a/SourceCode/2023/Nov2023/Mrinali/Task9/~Main.xaml
+++ b/SourceCode/2023/Nov2023/Mrinali/Task9/~Main.xaml
@@ -70,6 +70,7 @@
       <AssemblyReference>System.Memory</AssemblyReference>
       <AssemblyReference>System.Private.Uri</AssemblyReference>
       <AssemblyReference>UiPath.Platform</AssemblyReference>
+      <AssemblyReference>GlobalVariablesT1PNoYwrqg</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
   <Sequence sap2010:Annotation.AnnotationText="Read the values from the input dailogue box and store the values in Array and write into text file through the index values" DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="496,1426.6666666666667" sap2010:WorkflowViewState.IdRef="Sequence_1">
@@ -103,7 +104,7 @@
         <InArgument x:TypeArguments="s:String[]">[{FirstName,LastName}]</InArgument>
       </Assign.Value>
     </Assign>
-    <Assign DisplayName="Assign values to a variable" sap:VirtualizedContainerService.HintSize="434,85.33333333333333" sap2010:WorkflowViewState.IdRef="Assign_2">
+    <Assign DisplayName="Assign values to result variable" sap:VirtualizedContainerService.HintSize="434,85.33333333333333" sap2010:WorkflowViewState.IdRef="Assign_2">
       <Assign.To>
         <OutArgument x:TypeArguments="x:String">[result]</OutArgument>
       </Assign.To>
