--- a/SourceCode/2023/Nov2023/Mrinali/Task9/Main.xaml
+++ b/SourceCode/2023/Nov2023/Mrinali/Task9/Main.xaml
@@ -85,7 +85,7 @@
         <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Enter first name in Input Dialog box" sap:VirtualizedContainerService.HintSize="434,246" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="Please enter first  name" Title="First name">
+    <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Enter first name in Input Dialog box" sap:VirtualizedContainerService.HintSize="434,246" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="Please enter first name" Title="First name">
       <ui:InputDialog.Result>
         <OutArgument x:TypeArguments="x:String">[FirstName]</OutArgument>
       </ui:InputDialog.Result>
@@ -103,7 +103,7 @@
         <InArgument x:TypeArguments="s:String[]">[{FirstName,LastName}]</InArgument>
       </Assign.Value>
     </Assign>
-    <Assign DisplayName="Assign values to a variable" sap:VirtualizedContainerService.HintSize="434,85.33333333333333" sap2010:WorkflowViewState.IdRef="Assign_2">
+    <Assign DisplayName="Assign values to result variable" sap:VirtualizedContainerService.HintSize="434,85.33333333333333" sap2010:WorkflowViewState.IdRef="Assign_2">
       <Assign.To>
         <OutArgument x:TypeArguments="x:String">[result]</OutArgument>
       </Assign.To>
@@ -113,6 +113,6 @@
     </Assign>
     <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Display Result" sap:VirtualizedContainerService.HintSize="434,86.66666666666667" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;Entered Name is: &quot; + result]" />
     <ui:WriteTextFile File="{x:Null}" DisplayName="Write result into Text File" FileName="Name.txt" sap:VirtualizedContainerService.HintSize="434,136.66666666666666" sap2010:WorkflowViewState.IdRef="WriteTextFile_1" Text="[result]" />
-    <ui:LogMessage DisplayName="Display result values" sap:VirtualizedContainerService.HintSize="434,144.66666666666666" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[&quot;Result values displayed successfully&quot;]" />
+    <ui:LogMessage DisplayName="Display Result values" sap:VirtualizedContainerService.HintSize="434,144.66666666666666" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[&quot;Result values displayed successfully&quot;]" />
   </Sequence>
 </Activity>
